// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip Matches Snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="nhsuk-tooltip"
      >
        Hover Over Me
        <span
          class="nhsuk-tooltip__text"
        >
          Tooltip!
        </span>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="nhsuk-tooltip"
    >
      Hover Over Me
      <span
        class="nhsuk-tooltip__text"
      >
        Tooltip!
      </span>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Tooltip Passes through IDs 1`] = `
<div>
  <div
    class="nhsuk-tooltip"
  >
    Hover Over Me
    <span
      class="nhsuk-tooltip__text"
    >
      Tooltip!
    </span>
  </div>
</div>
`;

exports[`Tooltip Passes through IDs 2`] = `
<div>
  <div
    aria-labelledby="test-id-tooltip-text"
    class="nhsuk-tooltip"
    id="test-id"
  >
    Hover Over Me
    <span
      class="nhsuk-tooltip__text"
      id="test-id-tooltip-text"
    >
      Tooltip!
    </span>
  </div>
</div>
`;
